@@ -1,3 +1,4 @@
+Fixed: tools do not reset in reset all
 Fixed: protractor does not reset in first two tabs
 Fixed: protractor does not reset in prism break tab
 Made velocity sensor node resize with text
